# csman

./: .gitmodules  CMakeLists.txt  README.md
csman-cli/: CMakeLists.txt
csman-cli/include/csman/cli/: progress.hpp
csman-cli/src/: main.cpp  progress.cpp
csman-core/: CMakeLists.txt
csman-core/include/csman/core/: core.hpp  fwd.hpp  local.hpp  network.hpp  ops.hpp  parser.hpp  source.hpp
csman-core/src/: core.cpp  fwd.cpp  install.cpp  local.cpp  network.cpp  op_query.cpp  ops.cpp  parser.cpp  query.cpp  source.cpp
csman-core/tests/: test-local-search.cpp  test-local.cpp  test-network.cpp  test-source.cpp
csman-os/: CMakeLists.txt
csman-os/include/csman/os/: os.hpp
csman-os/src/: os.cpp  unix.cpp  unix.hpp  win32.cpp  win32.hpp
